# EventCenter

./: .gitignore  CLAUDE.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: settings.local.json
apps/event-app/: deploy.sh  drizzle.config.ts  next.config.ts  package.json  tsconfig.json
apps/event-app/drizzle/: 0000_acoustic_sharon_carter.sql  0001_petite_saracen.sql  0002_windy_loa.sql
apps/event-app/src/: globals.css  proxy.ts
apps/python-backend/: README.md  package.json  pyproject.toml
apps/python-backend/docs/: ARCHITECTURE.md  sequence-diagram-goals-updates.md
apps/python-backend/src/assistant/: __init__.py  config.py  main.py
apps/python-backend/src/assistant/agent/: __init__.py  agent.py  callbacks.py  llm.py  memory.py
apps/python-backend/src/assistant/api/: chat.py  routes.py
apps/python-backend/src/assistant/api/endpoints/: __init__.py  events.py  goals.py  updates.py
apps/python-backend/src/assistant/db/: __init__.py  base.py  engine.py  session.py
apps/python-backend/src/assistant/db/repositories/: __init__.py  chat_repository.py  event_repository.py
apps/python-backend/src/assistant/experts/: __init__.py
apps/python-backend/src/assistant/graphs/: __init__.py  expert_council.py
apps/python-backend/src/assistant/schemas/: __init__.py  chat.py  events.py  goals.py
apps/python-backend/src/assistant/tools/: __init__.py  commute.py  go_train.py  weather.py
apps/python-backend/src/chat_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: generate-types.ts  migrate-speaker-fields.ts
(+171 files in other folders)
